--- a/index.css
+++ b/index.css
@@ -23,20 +23,24 @@
 .res-container {
   display: flex;
   flex-wrap: wrap;
+  margin-left: 45px;
 }
 
 .search {
   padding: 10px;
+  margin-left: 45px;
 }
 
 .res-card {
-  padding: 5px;
+  padding: 10px;
   width: 200px;
+  margin: 5px;
 }
 
 .res-card:hover {
   cursor: pointer;
   border: 1px solid black;
+  border-radius: 20px;
 }
 
 .res-logo {
