--- a/index.css
+++ b/index.css
@@ -46,3 +46,20 @@
 .res-logo {
   width: 100%;
 }
+
+.filter-btn {
+  margin: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 500px;
+  height: 40px;
+  width: 190px;
+  cursor: pointer;
+  background-color: orange;
+  border-color: white;
+  border-style: none;
+  border-radius: 6px;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+}
