--- a/index.css
+++ b/index.css
@@ -59,13 +59,19 @@
   height: 40px;
   width: 190px;
   cursor: pointer;
-  background-color: orange;
+  background-color: #ff9800;
   border-color: white;
   border-style: none;
   border-radius: 6px;
   color: white;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: "Roboto";
+  padding: 6px;
+}
+
+.filter-btn:hover {
+  background-color: #fb8c00;
 }
 
 .shimmer-container {
@@ -112,9 +118,17 @@
 }
 
 .login {
-  background-color: #1976d2;
+  background-color: #4caf50;
+}
+
+.login:hover {
+  background-color: #45a049;
 }
 
 .logout {
-  background-color: red;
+  background-color: #f44336;
+}
+
+.logout:hover {
+  background-color: #d32f2f;
 }
