--- a/index.css
+++ b/index.css
@@ -52,12 +52,12 @@
 }
 
 .filter-btn {
-  margin: 10px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-left: 500px;
+  /* margin: 10px; */
+  margin-top: 10px;
+  /* margin-bottom: 30px; */
+  margin-left: 140px;
   height: 40px;
-  width: 190px;
+  width: 230px;
   cursor: pointer;
   background-color: #ff9800;
   border-color: white;
@@ -131,4 +131,49 @@
 
 .logout:hover {
   background-color: #d32f2f;
+}
+
+.searchFilterContainer {
+  display: flex;
+  margin-left: 210px;
+  margin-top: 30px;
+  /* border: 2px solid red; */
+  margin-bottom: 30px;
+}
+
+.find-the-food-input-box {
+  /* margin-left: 80px; */
+  height: 26px;
+  width: 210px;
+  /* cursor: pointer; */
+  background-color: #fafafa;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  color: black;
+  font-weight: bold;
+  font-size: 14px;
+  font-family: "Roboto";
+  padding: 6px;
+  border: 1px solid grey;
+  /* border: none; */
+  outline: none;
+}
+
+.search-restaurant-btn {
+  /* margin-left: 10px; */
+  height: 40px;
+  width: 100px;
+  cursor: pointer;
+  background-color: #00796b;
+  border-color: white;
+  border-style: none;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 2px;
+  border-top-left-radius: 2px;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Roboto";
+  padding: 6px;
 }
