learn redux in redux configureStore, useSelector, provider, createSlice, apply in my app

--- a/index.css
+++ b/index.css
@@ -844,3 +844,51 @@ body {
   font-size: 16px;
   font-weight: 600;
 }
+
+.cart-main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px;
+  background-color: #f5f5f5;
+}
+
+.cart-container {
+  width: 50%;
+  background-color: #ffffff;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.cart-heading {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  color: black;
+}
+
+.cart-item-clear-btn {
+  margin-top: 7px;
+  margin-bottom: 20px;
+  /* border: 2px solid red; */
+}
+
+.clear-btn {
+  background-color: #fa7e7e;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.clear-btn:hover {
+  background-color: #f56c6c;
+  transform: scale(1.05);
+}
